# ml_health_desease_predictor

./: .dockerignore  DOCKER_MLFLOW_README.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
models/: best_svm_model.pkl
notebooks/: eda.ipynb  featureengieer.ipynb  mlflow.ipynb  model_mvp.ipynb  preprocessing.ipynb
