[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heath_desease_predictor"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "alicia santos" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["heath_desease_predictor"]
include = ["pyproject.toml", "heath_desease_predictor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["heath_desease_predictor"]
force-sort-within-sections = true

